--- a/styles/auth.css
+++ b/styles/auth.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .auth-label {
-    @apply block text-[#9c9da2] font-yekan text-xs pb-2;
+    @apply block text-gray-700 font-yekan text-xs pb-2;
   }
 
   .auth-input {
@@ -16,7 +16,13 @@
   }
 
   .contaner-signin {
-    @apply bg-center bg-cover bg-no-repeat h-full w-full min-h-screen flex bg-none md:bg-[url('../public/image/bg-signin.webp')];
+    @apply bg-center bg-cover bg-no-repeat h-full w-full min-h-screen flex bg-none md:bg-[url('../public/image/sku.jpg')];
+  }
+  .step-level {
+    @apply w-12 h-12 bg-[#0096f5] rounded-full flex justify-center items-center;
+  }
+  .step-level > svg {
+    @apply w-6 h-6 shadow-sm;
   }
 }
 
@@ -34,6 +40,6 @@
 
 @layer utilities {
   .tag-wrap {
-    filter: drop-shadow(-30px 0px 10px #282a376a);
+    filter: drop-shadow(-10px 0px 10px #282a376a);
   }
 }
